--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Ecommerce Web App",
   "main": "server.js",
   "type": "module",
+  "engines": {
+    "node": "15.5.0",
+    "yarn": "1.22.10",
+    "npm": "7.3.0"
+  },
   "scripts": {
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
